<package format="2">

  <name>velodyne_puck</name>
  <version>2.3.0</version>
  <description>
    Basic ROS support for the Velodyne Puck LIDARs.
  </description>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author>Jack O'Quin</author>
  <author>Ke Sun</author>
  <author>Chao Qu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>velodyne_msgs</depend>

  <depend>roscpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
