<package format="2">

  <name>velodyne_puck</name>
  <version>2.0.0</version>
  <description>
    Basic ROS support for the Velodyne 3D LIDARs.
  </description>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author>Jack O'Quin</author>
  <author>Ke Sun</author>
  <author>Chao Qu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>velodyne_puck_driver</depend>
  <depend>velodyne_puck_msgs</depend>
  <depend>velodyne_puck_decoder</depend>

  <export>
    <metapackage/>
  </export>

</package>
