<package>

  <name>velodyne_puck_decoder</name>
  <version>1.2.0</version>
  <description>
    Point cloud conversions for Velodyne 3D LIDARs.
  </description>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>
  <author>Jesse Vera</author>
  <author>Ke Sun</author>
  <license>GNC General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>velodyne_puck_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>velodyne_puck_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_velodyne_puck_decoder.xml"/>
  </export>

</package>
