<package format="2">

  <name>velodyne_puck_driver</name>
  <version>2.0.0</version>
  <description>
    ROS device driver for Velodyne PUCK VLP-16.
  </description>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author> Jack O'Quin</author>
  <author>Patrick Beeson</author>
  <author>Michael Quinlan</author>
  <author>Yaxin Liu</author>
  <author>Ke Sun</author>
  <author>Chao Qu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>velodyne_puck_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_velodyne_puck.xml"/>
  </export>

</package>
