<package format="2">

  <name>velodyne_puck_msgs</name>
  <version>2.0.1</version>
  <description>
    ROS message definitions for Velodyne 3D LIDARs.
  </description>
  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
  <author>Jack O'Quin</author>
  <author>Ke Sun</author>
  <author>Chao Qu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
